<resources>
    <string name="app_name">Minesweeper</string>

    <!-- Text for Buttons and Headings -->

    <string name="play_solo_label">Play Solo</string>
    <string name="play_race_label">Play Race</string>
    <string name="log_out_label">Log Out</string>
    <string name="select_level_label">Select Level</string>
    <string name="create_account_text">Create New Account</string>
    <string name="login_text">Login</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="beginner_label">Beginner</string>
    <string name="intermediate_label">Intermediate</string>
    <string name="advanced_label">Advanced</string>
    <string name="choose_opponent">Who are you going to challenge?</string>
    <string name="start_race_label">Start Race</string>
    <string name="timer_label">Time: </string>
    <string name="leaderboard_label">Leaderboard</string>
    <string name="best_times">Best Times</string>
<!--    <string name="time">0:00</string>-->
    <!-- Placeholder Text for Text Input -->

    <string name="email_placeholder">Enter Email...</string>
    <string name="password_placeholder">Enter Password...</string>
    <string name="opponent_placeholder">Enter Opponents Username...</string>

    <!--    id for the buttons-->
    <item name="button_position_tag" type="id"/>

</resources>