<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/create_account_page"
    android:padding="15dp"
    android:background="@color/background"
    tools:context=".CreateAccountPageActivity"
    >

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/create_account_text"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="24sp"
        android:textColor="@color/dark_gray"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/email_login"
        android:layout_marginVertical="50dp"
        android:hint="@string/email_placeholder"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:background="@color/white"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textSize="24sp"
        android:textColor="@color/dark_gray"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="12dp"
        android:inputType="textPassword"
        android:id="@+id/password_login"
        android:hint="@string/password_placeholder"
        android:layout_marginVertical="50dp"
        android:background="@color/white"/>

    <Button
        android:layout_marginVertical="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_account_text"
        android:textSize="20sp"
        android:onClick="onClickCreateAccountReal"
        android:backgroundTint="@color/text_color"
        />
</LinearLayout>