<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/play_solo_page"
    android:padding="15dp"
    android:background="@color/background"
    tools:context=".PlaySoloActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/select_level_label"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginVertical="50dp"
        />

    <Button
        android:id="@+id/beginner_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beginner_label"
        android:textColor="@color/white"
        android:background="@drawable/boxy_button"
        android:textSize="20sp"
        app:backgroundTint="@color/text_color"
        android:layout_marginVertical="50dp"
        />

    <Button
        android:id="@+id/intermidate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intermediate_label"
        android:textColor="@color/white"
        android:background="@drawable/boxy_button"
        android:textSize="20sp"
        app:backgroundTint="@color/text_color"
        android:layout_marginVertical="50dp"
        />

    <Button
        android:id="@+id/advanced_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_label"
        android:textColor="@color/white"
        android:background="@drawable/boxy_button"
        android:textSize="20sp"
        app:backgroundTint="@color/text_color"
        android:layout_marginVertical="50dp"
        />

</LinearLayout>