<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/title_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="15dp"
    tools:context=".TitlePageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingBottom="40dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_label"
        android:textSize="24sp"
        android:textColor="@color/text_color"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/username_login"
        android:layout_marginVertical="20dp"
        android:hint="@string/username_placeholder"
        android:padding="5dp"
        android:background="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textSize="24sp"
        android:textColor="@color/text_color"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="5dp"
        android:id="@+id/password_login"
        android:hint="@string/password_placeholder"
        android:layout_marginVertical="20dp"
        android:background="@color/white"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="150dp"
        android:text="@string/login_text"
        android:layout_marginVertical="30dp"
        android:textSize="20sp"
        android:onClick="onClickLogIn"
        android:backgroundTint="@color/text_color"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_account_text"
        android:textSize="20sp"
        android:backgroundTint="@color/dark_gray"
        android:onClick="onClickCreateAccount"
        />

</LinearLayout>