<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomePageActivity">

    <LinearLayout
        android:id="@+id/home_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/insert_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/play_solo_button"
            android:onClick="onClickPlaySolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_solo_label"
            android:textColor="@color/white"
            android:background="@drawable/boxy_button"
            android:textSize="20sp"
            app:backgroundTint="@color/text_color"
            android:layout_marginVertical="50dp" />

        <Button
            android:id="@+id/play_race_button"
            android:onClick="onClickPlayRace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_race_label"
            android:textColor="@color/white"
            android:background="@drawable/boxy_button"
            android:textSize="20sp"
            app:backgroundTint="@color/text_color"
            android:layout_marginVertical="50dp" />

        <Button
            android:id="@+id/leaderboard"
            android:onClick="onClickLeaderboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard_label"
            android:textColor="@color/white"
            android:background="@drawable/boxy_button"
            android:textSize="20sp"
            app:backgroundTint="@color/text_color"
            android:layout_marginVertical="50dp" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boxy_button"
            app:backgroundTint="@color/dark_gray"
            android:text="@string/log_out_label"
            android:onClick="onClickLogOut"
            android:layout_marginTop="30dp"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>
