<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/prepare_race_page"
    android:padding="15dp"
    android:background="@color/background"
    tools:context=".PrepareRaceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_color"
        android:text="@string/choose_opponent"
        android:textSize="36sp"
        android:layout_marginVertical="100dp"
        />

    <EditText
        android:id="@+id/opponents_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:textSize="24sp"
        android:inputType="text"
        android:hint="@string/opponent_placeholder"
        android:padding="12dp"
        android:layout_marginBottom="50dp"
        />

    <Button
        android:id="@+id/start_race_button"
        android:onClick="onClickStartRace"
        android:layout_marginVertical="50dp"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/text_color"
        android:text="@string/start_race_label"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>